# docassemble-DelegationParentalAuthority

./: MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/DelegationParentalAuthority/data/questions/: delegation_of_parental_authority.yml  review.yml
docassemble/DelegationParentalAuthority/data/templates/: delegation_of_parental_authority.docx  delegation_of_parental_authority_next_steps.docx  dpa_instructions.docx
